# Tensor-Crypt

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT_VERIFICATION_AND_SOLIDIFICATION.md  CLEANUP_AUDIT_REPORT.md  CODEX_CHANGE_REPORT.md  COMMENTING_AUDIT_REPORT.md  Documentation.md  Implement.md  OPEN_QUESTIONS_AND_RESIDUAL_RISKS.md  PERFORMANCE_AUDIT_AND_RESULTS.md  Plan.md  README.md  RELEASE_NOTES.md  REPOSITORY_SPLIT_MANIFEST.md  REPO_HARDENING_AND_OPTIMIZATION_PATCH_SUMMARY.md  STRUCTURE_REFACTOR_REPORT.md  VALIDATION_MATRIX.md  blueprint.md  config.py  dump_py_to_text.py  final_diff_review.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  viewer_completion_and_dependency_verification_patch.md
.agent/: AGENTS.md  PLANS.md
artifacts/release/: five_brain_benchmark_smoke.json  single_brain_vmap_benchmark_smoke.json
docs/: architecture_overview.md  compatibility_notes.md  restructure_execution_plan.md  restructure_mapping_audit.md  restructure_validation_report.md
engine/: __init__.py  brain.py  evolution.py  grid.py  logger.py  mapgen.py  perception.py  physics.py  ppo.py  registry.py  respawn.py  simulation.py
scripts/: benchmark_runtime.py  dump_py_to_text.py  run_resume_chain_audit.py  run_soak_audit.py
src/: config.py  main.py  run.py
tensor_crypt/: __init__.py  config_bridge.py  runtime_config.py
tests/: conftest.py  test_benchmark_and_scheduler.py  test_binary_reproduction.py  test_bloodline_brains.py  test_catastrophe_scheduler_controls.py  test_catastrophes.py  test_checkpoint_atomicity.py  test_checkpoint_resume_policy.py  test_dependency_governance.py  test_engine_and_viewer_integration.py  test_experimental_family_vmap_inference.py  test_grid_and_mapgen.py  test_identity_substrate.py  test_imports_and_compat.py  test_logging_and_run_paths.py  test_optimization_patch_integration.py  test_perception.py  test_physics.py  test_ppo.py  test_ppo_reward_surface.py  test_ppo_singleton_advantages.py  test_prompt5_binary_reproduction.py  test_prompt6_catastrophes.py  test_prompt7_audit.py  test_prompt7_checkpoint_atomicity.py  test_prompt7_telemetry.py  test_registry_respawn.py  test_runtime_checkpoint_substrate.py  test_stage2_lifecycle.py  test_telemetry_ledgers.py  test_telemetry_spawn_schema_hardening.py  test_uid_ppo_hardening.py  test_validation_harness.py  test_verification_telemetry_integrity.py  test_viewer_color_semantics.py  test_viewer_layout_cleanup.py  test_viewer_patch_package.py
viewer/: __init__.py  camera.py  colors.py  input.py  layout.py  panels.py  text_cache.py
(+203 files in other folders)
