[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-crypt"
version = "0.1.0"
description = "Tensor-backed multi-agent simulation runtime with lineage-aware PPO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py",
  "numpy",
  "pandas",
  "psutil",
  "pyarrow",
  "pygame-ce>=2.5.6,<2.6",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
tensor-crypt = "tensor_crypt.app.launch:main"

[tool.setuptools]
py-modules = ["config", "main", "run"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tensor_crypt*", "engine*", "viewer*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --basetemp=.pytest_tmp_run"
cache_dir = ".pytest_cache_run"
