[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-crypt"
version = "0.9.0"
description = "Self-centric single-family Tensor Crypt runtime with vmap-capable inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py",
  "numpy",
  "pandas",
  "psutil",
  "pyarrow",
  "pygame-ce>=2.5.6,<2.6",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
tensor-crypt = "tensor_crypt.app.launch:main"

[tool.setuptools]
py-modules = ["config", "main", "run"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tensor_crypt*", "engine*", "viewer*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"
cache_dir = ".pytest_cache_run"
